--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,25 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <queries>
+      <intent>
+        <action android:name="android.intent.action.VIEW"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+        <data android:scheme="https"/>
+      </intent>
+      <intent>
+        <action android:name="android.intent.action.VIEW"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+        <data android:scheme="mailto"/>
+      </intent>
+      <intent>
+        <action android:name="android.intent.action.VIEW"/>
+        <category android:name="android.intent.category.BROWSABLE"/>
+        <data android:scheme="tel"/>
+      </intent>
+    </queries>
+
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
